# brlcad

./: .cvsignore  Cakefile  Cakefile.defs  Cakefile.lib  Cakefile.prog  INSTALL.cmake  makefile.vc
bat/: subdirmk.bat
brlman/: brlman
burst/: Cakefile
conv/: Cakefile
db/: xm4.asc
doc/: agreement  agreement.rtf  agreement_R6.0.rtf  archer_ack.txt  press-release
doc/docbook/: Makefile.am
doc/docbook/articles/projection_shader/projection_shader_images/: Makefile.am
doc/docbook/lessons/mged/L005_imgs/: Makefile.am
doc/docbook/lessons/mged/L007_imgs/: Makefile.am
doc/docbook/lessons/mged/L016_imgs/: Makefile.am
doc/docbook/lessons/mged/creating_primitive_shapes_images/: Makefile.am
doc/docbook/lessons/mged/goblet_material_properties_images/: Makefile.am
doc/docbook/lessons/mged/learning_boolean_expressions_images/: Makefile.am
doc/docbook/lessons/mged/placing_shapes_in_3d_2_images/: Makefile.am
doc/docbook/oed/: Makefile.am
fbserv/: Cakefile
g_lint/: Cakefile
gtools/: Cakefile
h/: photonmap.h
halftone/: Cakefile
html/manuals/mged/: mged_cmd_index.html
include/: config_win.h  photonmap.h
iwidgets4.0.1/: configure
iwidgets4.0.1/win/: pkg.vc
jove/: Cakefile
libfb/: Cakefile
libitcl/: rules.vc
libitcl3.2/: config.vc  configure  makefile.vc
libitcl3.2/itcl/win/: makefile.vc
libitcl3.2/itk/win/: makefile.vc
libitcl3.2/iwidgets2.2.0/: configure
libitcl3.2/iwidgets2.2.0/tests/: feedback.test  hyperhelp.test  scrolledhtml.test
libitcl3.2/iwidgets3.0.0/: configure
libitcl3.2/iwidgets3.0.0/tests/: feedback.test  hyperhelp.test  (+1 more)
liboptical/: shade.c
libtcl/: changes
libtcl/doc/: man.macros
libtcl/mac/: MW_TclAppleScriptHeader.pch  MW_TclHeader.pch  porting.notes  tclMacProjects.sea.hqx
libtcl/unix/: configure  ldAix  porting.notes  porting.old
libtcl/win/: tclWinChan.c
libtcl8.3/: changes
libtcl8.3/doc/: man.macros
libtcl8.3/mac/: MW_TclAppleScriptHeader.pch  MW_TclHeader.pch  MW_TclTestHeader.pch  porting.notes
libtcl8.3/unix/: configure  ldAix
libtcl8.4/: changes
libtcl8.4/doc/: man.macros
libtcl8.4/mac/: MW_TclAppleScriptHeader.pch  MW_TclBuildLibHeader.pch  MW_TclHeader.pch  MW_TclStaticHeader.pch  MW_TclTestHeader.pch  porting.notes
libtcl8.4/tools/: configure  tcl.wse.in
libtcl8.4/unix/: ldAix
libtcl8.4/win/: buildall.vc.bat  makefile.vc  rules.vc
libtk/: changes
libtk/doc/: man.macros
libtk/generic/: prolog.ps
libtk/mac/: MW_TkHeader.pch
libtk/unix/: configure  porting.notes  porting.old
libtk8.3/: changes
libtk8.3/doc/: man.macros
libtk8.3/generic/: prolog.ps
libtk8.3/mac/: MW_TkHeader.pch  MW_TkTestHeader.pch
libtk8.3/unix/: configure
libtk8.4/: changes
libtk8.4/doc/: man.macros
libtk8.4/generic/: prolog.ps
libtk8.4/mac/: MW_TkBuildLibHeader.pch  MW_TkHeader.pch  MW_TkStaticHeader.pch  MW_TkTestHeader.pch
libtk8.4/win/: buildall.vc.bat  makefile.bc  makefile.vc  rules.vc
libtkGLX/: Cakefile
libwdb/: Cakefile
m4/: OpenGL.m4
mged/: Cakefile  dm-ogl.c
misc/: Cakefile.defs  rcs2log
misc/archlinux/: PKGBUILD.static
misc/nsis/: brlcad.nsi
misc/win32-msvc/: brlcad.dsw
misc/win32-msvc9/: Makefile.am
mk/: Cakefile
nirt/: Cakefile
patch/: Cakefile
proc-db/: Cakefile
regress/: ref_m4i65  vls_vprintf.sh
remrt/: Cakefile
rt/: Cakefile  viewrange.c
rttherm/: Cakefile
sample_applications/: Cakefile
src/archer/: archer.bat
src/brlman/: brlman
src/bwish/: cadAppInit.c
src/libbn/: vers_win.c
src/libbu/: fchmod.c  test_vls_vprintf.c  uce-dirent.h  vers_win.c
src/libfft/: fftc  ifftc
src/libged/: set_output_script.c
src/libicv/: fileformat.c
src/liboptical/: liboptical.dsp  shade.c
src/librt/: importFg4Section.c
src/libsysv/: vers_win.c
src/libtclcad/: tclcad.c
src/mged/: dm-ogl.c  dm-wgl.c  mged.bat
src/tclscripts/: hv3_man_browser_test.tcl  tkcon.tcl
src/util/: binfo.c
tclscripts/lib/: View.tcl
tclscripts/mged/: gui.tcl  openw.tcl  text.tcl
util/: Cakefile  binfo.c
vas4/: Cakefile
(+1099 files in other folders)
