# $Id: Makefile.am 27346 2007-01-20 16:01:02Z brlcad $

projection_shaderdir = $(BRLCAD_DATA)/html/articles/projection_shader/projection_shader_images

projection_shader_DATA = \
	figure1.png \
	figure2.png \
	figure3.png \
	figure4.png \
	figure5.png \
	figure6.png \
	figure7.png 

EXTRA_DIST = $(projection_shader_DATA)

include $(top_srcdir)/misc/Makefile.defs
