# $Id: Makefile.am 27346 2007-01-20 16:01:02Z brlcad $

L005_imgsdir = $(BRLCAD_DATA)/html/lessons/mged/L005_imgs

L005_imgs_DATA = \
	combinationeditor.png \
	intersectionspheres.png \
	raytraceddome.png \
	raytracedpart1.png \
	raytracedpart2.png \
	raytracedpart3.png \
	subtractionspheres.png \
	twoprimitivespheres.png \
	unionspheres.png
	 

EXTRA_DIST = $(L005_imgs_DATA)

include $(top_srcdir)/misc/Makefile.defs
