# $Id: Makefile.am 27346 2007-01-20 16:01:02Z brlcad $

L007_imgsdir = $(BRLCAD_DATA)/html/lessons/mged/L007_imgs

L007_imgs_DATA = \
	goblet_complete_window.png \
	goblet_mater_complete.png \
	goblet_mirror.png \
	goblet_semitransparent.png
	 

EXTRA_DIST = $(L007_imgs_DATA)

include $(top_srcdir)/misc/Makefile.defs
