# $Id: Makefile.am 27346 2007-01-20 16:01:02Z brlcad $

L016_imgsdir = $(BRLCAD_DATA)/html/lessons/mged/L016_imgs

L016_imgs_DATA = \
	radio_casecut_raytrace.png \
	radio_cut_raytrace.png \
	radio_cut_wireframe.png \
	radio_default_components_props.png \
	radio_new_design.png \
	radio_transparent.png \
	radio_wireframe_circ_board.png \
	radio_with_mater_props.png
	 

EXTRA_DIST = $(L016_imgs_DATA)

include $(top_srcdir)/misc/Makefile.defs
