# $Id: Makefile.am 27346 2007-01-20 16:01:02Z brlcad $

creating_primitive_shapes_imagesdir = $(BRLCAD_DATA)/html/lessons/mged/creating_primitive_shapes_images

creating_primitive_shapes_images_DATA = \
	commandwindow.png \
	graphicswindow.png \
	terminal.png
	 

EXTRA_DIST = $(creating_primitive_shapes_images_DATA)

include $(top_srcdir)/misc/Makefile.defs
