# $Id: Makefile.am 27346 2007-01-20 16:01:02Z brlcad $

goblet_material_properties_imagesdir = $(BRLCAD_DATA)/html/lessons/mged/goblet_material_properties_images

goblet_material_properties_images_DATA = \
	goblet_complete_window.png \
	goblet_mater_complete.png \
	goblet_mirror.png \
	goblet_semitransparent.png
	 

EXTRA_DIST = $(goblet_material_properties_images_DATA)

include $(top_srcdir)/misc/Makefile.defs
