# $Id: Makefile.am 27346 2007-01-20 16:01:02Z brlcad $

learning_boolean_expressions_imagesdir = $(BRLCAD_DATA)/html/lessons/mged/learning_boolean_expressions_images

learning_boolean_expressions_images_DATA = \
	combinationeditor.png \
	intersectionspheres.png \
	raytraceddome.png \
	raytracedpart1.png \
	raytracedpart2.png \
	raytracedpart3.png \
	subtractionspheres.png \
	twoprimitivespheres.png \
	unionspheres.png
	 

EXTRA_DIST = $(learning_boolean_expressions_images_DATA)

include $(top_srcdir)/misc/Makefile.defs
