# $Id: Makefile.am 27346 2007-01-20 16:01:02Z brlcad $

placing_shapes_in_3d_2_imagesdir = $(BRLCAD_DATA)/html/lessons/mged/placing_shapes_in_3d_2_images

placing_shapes_in_3d_2_images_DATA = \
	candle_base_sphere_topview.png \
	candle_multipane.png \
	candle_spheres_az35el25.png \
	candle_spheres_frontview.png \
	candle_spheres_raytraced.png \
	candle_spheres_topview.png \
	primitive_editor.png \
	primitive_selection_dropdown.png

EXTRA_DIST = $(placing_shapes_in_3d_2_images_DATA)

include $(top_srcdir)/misc/Makefile.defs
